# flask-masterclass

./: .gitignore  Makefile  README.md  makefile  pyproject.toml  settings.toml
.github/workflows/: flask-masterclass.yml  masterclass.yml  python-app.yml
app/: __init__.py  development.sqlite  ext.py  form.py  routes.py
app/controllers/: auth_controller.py  home_controller.py  posts_controller.py
app/model/: post.py  user.py
app/views/auth/: login.html  register.html
app/views/home/: index.html
app/views/layouts/: application.html
app/views/posts/: new.html  show.html
tests/: create_post_form_test.py  fixtures.py  home_test.py  login_test.py  post_test.py
tests/factories/: post.py  user.py
